@@ -46,11 +46,4 @@
 
 /** initializes a menu with it's items */
 - (id) initWithItems: (MenuItem*) item vaList: (va_list) args;
-
-/** align items */
--(void) alignItems;
-
-/** if a point in inside an item, in returns the item */
--(id) itemInPoint: (CGPoint) p idx:(int*)idx;
-
 @end
